@@ -195,6 +195,7 @@ void signal_process(struct ctx_t *ctx)
 			!sim_sigset_member(&ctx->signal_masks->blocked, sig))
 		{
 			ctx_process_suspended_thread_cancel(ctx);
+			ke_process_suspended_schedule();
 			ke_process_suspended();
 			signal_handler_run(ctx, sig);
 			sim_sigset_del(&ctx->signal_masks->pending, sig);
